# lmms-eval-fork

./: .gitignore  pyproject.toml
envs/cambrians/: pyproject.toml
envs/llav_ov_15/: pyproject.toml
eval_scripts/: cambrians_vsc.sh  cambrians_vsc_streaming.sh  cambrians_vsibench.sh  cambrians_vsr.sh  llava_ov_15_vsibench.sh  qwen25vl_charades.sh  qwen25vl_longvideobench.sh  qwen25vl_mme.sh  qwen25vl_tempcompass.sh  qwen25vl_vsibench.sh  qwen3vl_longvideobench.sh  qwen3vl_vsibench.sh
knowledge/: summary_cambrian_s_spatial_supersensing.md  summary_moviechat_long_video_sparse_memory.md  summary_qwen2_5_vl.md  summary_qwen3_vl.md  summary_tall_ctrl_charades_sta_1705_02101.md  summary_thinking_in_space_vsi_bench_2412_14171.md
lmms_eval/: __main__.py  evaluator.py
skills/lmms-eval-guide/agents/: openai.yaml
skills/lmms-eval-guide/references/: overview.md
tools/: download_hf_datasets.py
